--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>  
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p> 
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio assumenda ratione consectetur explicabo, magni architecto in incidunt quibusdam molestiae possimus rerum quasi expedita sapiente commodi natus beatae omnis ab dolor.</p> 
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p> 
+            <h2>Curso de Javascript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus, incidunt? Accusantium sint sed, voluptatum veritatis, repellat nesciunt tempora quia earum doloribus numquam architecto minus impedit nisi? Ad sint consectetur vitae?</p> 
         </article>
     </main>
 </body>
