--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 e CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML e CSS">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio assumenda ratione consectetur explicabo, magni architecto in incidunt quibusdam molestiae possimus rerum quasi expedita sapiente commodi natus beatae omnis ab dolor.</p> 
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de Javascript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso Javascript">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus, incidunt? Accusantium sint sed, voluptatum veritatis, repellat nesciunt tempora quia earum doloribus numquam architecto minus impedit nisi? Ad sint consectetur vitae?</p> 
+            <p><a href="curso-js.html">Acesse o curso de Javascript</a></p>
         </article>
     </main>
 </body>
